@@ -1,2 +1,2 @@
 if {![package vsatisfies [package provide Tcl] 8.3]} {return}
-package ifneeded ftpd 1.2.3 [list source [file join $dir ftpd.tcl]]
+package ifneeded ftpd 1.2.4 [list source [file join $dir ftpd.tcl]]
